# pruning-turbulence-vit

./: .gitignore  CLAUDE.md  README.md  environment.yml  hyperparams.yaml  l1_prune.o4960129  prune_unstructured.pbs.o5040082  prune_unstructured.pbs.o5040680  prune_unstructured.pbs.o5040705  pyproject.toml  taylor_prune.o4960128
configs/: README.md  compare_importance_scores.toml
datagen/: batch_generate.sh  compute_stats.py  generate.pbs  generate.py  visualize_stats.ipynb
eval/: analyze_model.py  config.yaml
jobs/: compare_importance_scores.pbs  distill.pbs  finetune_l1.pbs  inference.pbs  long_analysis.pbs  make_gif.pbs  prune_attention_heads.pbs  prune_unstructured.pbs  run_notebook.pbs  short_analysis.pbs  train.pbs
notebooks/: README.md  long_analysis.ipynb  pruned_models.ipynb  sandbox.ipynb  sandbox.py  visualize_long_analysis.ipynb  visualize_short_analysis.ipynb
scripts/: compare_importance_scores.py  distill.py  inference.py  long_analysis.py  make_gif.py  make_inference.py  prune_attention_heads.py  prune_unstructured.py  short_analysis.py  train.py
src/: README.md  chunk_npy.py  job.pbs  job_prune_iterative.pbs  job_train_distributed.pbs  jshen.o1903118  jshen.o1904160  jshen.o1971054  jshen.o1986234  jshen.o1986291  jshen.o2138713  make_gif.py  pretrain.py  prune_attention_heads.pbs.o2552722  prune_global.py  prune_mlp_latents.py  prune_unstructured.pbs.o2250851  prune_unstructured.py  sandbox.ipynb  script_distill.py  script_finetune_l1.py  script_long_analysis.py  script_make_gif.py  script_make_inference.py  script_pretrain.py  script_train.py  (+9 more)
(+193 files in other folders)
